src/styles/steps/properties.css
@import "../colors.css";
@import "../spacing.css";

:root {
  --steps-background-color: var(--color-light-smoke-40);
  --steps-border-radius: 3px;
  --steps-border: 1px solid var(--color-light-grey-20);
  --steps-item-arrow-height: 100%;
  --steps-item-arrow-left-border: var(--color-white);
  --steps-item-arrow-left: calc(100% - var(--spacing-small));
  --steps-item-arrow-right-border: var(--color-light-platinum-50);
  --steps-item-arrow-right: calc(100% - 22px);
  --steps-item-arrow-top: 0;
  --steps-item-arrow-transform: rotate(45deg);
  --steps-item-arrow-width: 35px;
  --steps-item-font-size: 14px;
  --steps-item-font-weight: 900;
  --steps-item-indicator-background-color: var(--color-white);
  --steps-item-indicator-color: var(--color-light-greenish-100);
  --steps-item-indicator-font-size: 12px;
  --steps-item-indicator-font-weight: 900;
  --steps-item-indicator-line-height: 20px;
  --steps-item-indicator-margin-right: var(--spacing-tiny);
  --steps-item-indicator-radius: 50%;
  --steps-item-indicator-size: 20px;
  --steps-item-padding: var(--spacing-tiny);
  --steps-item-text-align: center;
  --steps-item-text-transform: uppercase;
}

